--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,9 +1,9 @@
 <jhi-page-ribbon></jhi-page-ribbon>
-<div>
+<div class="bg-white-only">
     <router-outlet name="navbar"></router-outlet>
 </div>
-<div class="container-fluid">
-    <div class="card jh-card">
+<div class="">
+    <div class="">
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
     </div>
