--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -67,15 +67,15 @@ Logo styles
 }
 
 .logo .logo-img {
-    height: 45px;
+    height: 50px;
     display: inline-block;
     vertical-align: middle;
-    width: 70px;
+    width: 100px;
 }
 
 .logo-img {
     height: 100%;
-    background: url("../../../content/images/logo-jhipster.png") no-repeat center center;
+    background: url("../../../content/images/logo.png") no-repeat center center;
     background-size: contain;
     width: 100%;
 }
