achievement list component

--- a/src/main/webapp/app/training/survey/survey.component.html
+++ b/src/main/webapp/app/training/survey/survey.component.html
@@ -176,22 +176,7 @@
             <div class="line line b-b line-lg pull-in"></div>
             <p class="m-n font-thin h1">Przeglad wynikow sportowych</p>
             <div class="row">
-                <table class="table table-striped m-b-none">
-                    <thead>
-                    <tr>
-                        <th>Dystans</th>
-                        <th>Rekord życiowy/Data</th>
-                        <th>Ostatni czas/Data</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <achievement-list></achievement-list>
             </div>
 
 
