--- a/src/main/webapp/app/training/survey/achivment-results/achievement-list.component.html
+++ b/src/main/webapp/app/training/survey/achivment-results/achievement-list.component.html
@@ -1,5 +1,9 @@
 <article class="form-group col-sm-12 m-t-md">
 
+    <div class="datepicker-container">
+        <ng-datepicker [(ngModel)]="date"></ng-datepicker>
+    </div>
+
     <table class="table table-striped m-b-md">
         <thead>
         <tr>
@@ -20,6 +24,7 @@
     </table>
 
     <button  class="btn  btn-primary">Dodaj</button>
+
 
 
 </article>
