--- a/src/main/webapp/app/training/results/add-result.component.html
+++ b/src/main/webapp/app/training/results/add-result.component.html
@@ -1,65 +1,166 @@
 <div class="tech-background">
     <div class="container padder-v">
 
-        <p class="m-n font-thin h1">Dodaj wynik</p>
+        <p class="m-n font-thin h1 padder">Dodaj wynik</p>
 
-        <form>
-            <!--Distance-->
+        <!--<form #f="ngForm" novalidate class="form-validation">-->
+        <!--&lt;!&ndash;Distance&ndash;&gt;-->
+        <!--<div class="row">-->
+        <!--<div class="form-group">-->
+        <!--<label class="font-thin h3 m-xxs m-t-md padder">Dystans</label>-->
+        <!--<div class="form-inline col-md-12 m-t-md">-->
+        <!--<input type="number" name="distance" [(ngModel)]="newResult.distance"-->
+        <!--class="col-sm-8 form-control " placeholder="Dystans"-->
+        <!--#distance="ngModel" required>-->
+        <!--<select class="input-group-addon" [(ngModel)]="newResult.distanceUnit" name="distanceUnit">-->
+        <!--<option *ngFor="let c of unit" [ngValue]="c">{{c.name}}</option>-->
+        <!--</select>-->
+        <!--</div>-->
+        <!--<span class="m-b-none padder" *ngIf="distance?.dirty && distance?.errors?.required">To pole jest wymagane.</span>-->
+
+        <!--</div>-->
+        <!--</div>-->
+
+        <!--<div class="row">-->
+        <!--<div class="form-group">-->
+        <!--<label class=" font-thin h3 m-xxs m-t-md padder">Rekord zyciowy</label>-->
+        <!--<div class="form-group form-inline m-t-md">-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">hours</span>-->
+
+        <!--</div>-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">minutes</span>-->
+
+        <!--</div>-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">seconds</span>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+
+        <!--<div class="row">-->
+        <!--<div class="form-group">-->
+        <!--<label class="font-thin h3 m-xxs m-t-md padder">Data ostatniego czasu</label>-->
+        <!--<div class="padder m-t-md">-->
+        <!--<ng-datepicker [(ngModel)]="date" name="test"></ng-datepicker>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
 
 
+        <!--<div class="row" style="position: relative;">-->
+        <!--<div class="form-group">-->
+        <!--<label class="font-thin h3 m-xxs m-t-md padder">Ostatni czas</label>-->
+        <!--<div class="form-group form-inline  m-t-md">-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">hours</span>-->
+
+        <!--</div>-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">minutes</span>-->
+
+        <!--</div>-->
+        <!--<div class="col-md-4 input-group ">-->
+        <!--<input type="number" class=" form-control no-border">-->
+        <!--<span class=" input-group-addon">seconds</span>-->
+
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
 
 
+        <!--</form>-->
+
+        <!--&lt;!&ndash;<button class="btn btn-primary" (click)="addNewResult()">Dodaj</button>&ndash;&gt;-->
+
+
+        <form [formGroup]="newResultForm" novalidate class="form-validation padder">
             <div class="row">
-                <div class="form-group col-sm-8 m-t-md">
-                    <label class=" font-thin h3 m-xxs">Dystans</label>
-                    <select class="form-control no-border">
-                        <option>400m</option>
-                        <option>1k</option>
-                        <option>2k</option>
-                        <option>3k</option>
-                        <option>4k</option>
-                        <option>10k</option>
-                    </select>
-
+                <div class="form-group">
+                    <label class="font-thin h3 m-xxs m-t-md padder">Dystans</label>
+                    <div class="form-inline col-md-12 m-t-md">
+                        <input type="number" name="distance" class="col-sm-8 form-control " placeholder="Dystans"
+                               formControlName="distance">
+                    </div>
+                    <span class="m-b-none padder"
+                          *ngIf="newResultForm.dirty && newResultForm.controls.distance.errors?.required">To pole jest wymagane.</span>
                 </div>
+            </div>
+            <div class="row">
+                <form [formGroup]="durationGroup">
+                    <div class="form-group">
+                        <label class=" font-thin h3 m-xxs m-t-md padder">Rekord zyciowy</label>
+                        <div class="form-group form-inline m-t-md">
+                            <div class="col-md-4 input-group ">
+                                <input type="number" class="form-control" formControlName="hours">
+                                <span class=" input-group-addon">hours</span>
+
+                            </div>
+                            <div class="col-md-4 input-group ">
+                                <input type="number" class="form-control" formControlName="minutes">
+                                <span class=" input-group-addon">minutes</span>
+
+                            </div>
+                            <div class="col-md-4 input-group ">
+                                <input type="number" class="form-control" formControlName="seconds">
+                                <span class=" input-group-addon">seconds</span>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="m-b-none padder"
+                          *ngIf="durationGroup.dirty && !durationGroup.valid">To pole jest wymagane.</span>
+                </form>
             </div>
 
             <div class="row">
-                <div class="form-group col-md-12 ">
-                    <label class=" font-thin h3 m-xxs">Rekord zyciowy</label>
-                    <time-duration-picker [inputDisabled]=false returnedValueUnit="second" (onChange)="onNumberChanged($event)" class="row">
-                        <time-duration-picker-unit class="col-md-4" [name]="'second'" [label]="'Seconds'" [min]="0" [max]="59" [step]="1"></time-duration-picker-unit>
-                        <time-duration-picker-unit class="col-md-4" [name]="'minute'" [label]="'Minutes'" [min]="0" [max]="59" [step]="1"></time-duration-picker-unit>
-                        <time-duration-picker-unit class="col-md-4" [name]="'hour'" [label]="'Hours'" [min]="0" [max]="23" [step]="1"></time-duration-picker-unit>
-                    </time-duration-picker>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="form-group col-sm-8 m-t-md">
-                    <label class=" font-thin h3 m-xxs">Data ostatniego czasu</label>
-                    <div class="ngx-datepicker-container">
-                        <ng-datepicker [(ngModel)]="date" name="test"></ng-datepicker>
+                <div class="form-group padder">
+                    <label class="font-thin h3 m-xxs m-t-md">Data ostatniego czasu</label>
+                    <div class="m-t-md">
+                        <ng-datepicker formControlName="lastRunTime"></ng-datepicker>
                     </div>
                 </div>
             </div>
 
-
-
             <div class="row">
-                <div class="form-group col-sm-8 m-t-md">
-                    <label class=" font-thin h3 m-xxs">Ostatni czas</label>
-                    <time-duration-picker [inputDisabled]=false returnedValueUnit="second" (onChange)="onNumberChanged($event)" class="row">
-                        <time-duration-picker-unit class="col-md-4" [name]="'second'" [label]="'Seconds'" [min]="0" [max]="59" [step]="1"></time-duration-picker-unit>
-                        <time-duration-picker-unit class="col-md-4" [name]="'minute'" [label]="'Minutes'" [min]="0" [max]="59" [step]="1"></time-duration-picker-unit>
-                        <time-duration-picker-unit class="col-md-4" [name]="'hour'" [label]="'Hours'" [min]="0" [max]="23" [step]="1"></time-duration-picker-unit>
-                    </time-duration-picker>                </div>
-            </div>
+                <form [formGroup]="lastRunTimeGroup">
+                    <div class="form-group">
+                        <label class=" font-thin h3 m-xxs m-t-md padder">Ostatni czas</label>
+                        <div class="form-group form-inline m-t-md">
+                            <div class="col-md-4 input-group">
+                                <input type="number" class=" form-control" formControlName="hours">
+                                <span class=" input-group-addon">hours</span>
 
+                            </div>
+                            <div class="col-md-4 input-group">
+                                <input type="number" class=" form-control" formControlName="minutes">
+                                <span class=" input-group-addon">minutes</span>
+
+                            </div>
+                            <div class="col-md-4 input-group">
+                                <input type="number" class=" form-control" formControlName="seconds">
+                                <span class=" input-group-addon">seconds</span>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="m-b-none"
+                          *ngIf="lastRunTimeGroup.dirty && !lastRunTimeGroup.valid">To pole jest wymagane.</span>
+                </form>
+            </div>
 
         </form>
 
-        <button class="btn  btn-primary" (click)="click()">Dodaj</button>
+        <div class="padder">
+            <button class="btn btn-primary" (click)="addNewResult()">Dodaj</button>
+        </div>
 
     </div>
+
 </div>
