--- a/src/main/webapp/app/training/results/results.component.html
+++ b/src/main/webapp/app/training/results/results.component.html
@@ -18,10 +18,10 @@
                     <tbody>
 
 
-                    <tr *ngFor="let achievement of achievements">
-                        <td><span>{{achievement.distance}}</span></td>
-                        <td><span>{{achievement.date}}</span></td>
-                        <td><span>{{achievement.time}}</span></td>
+                    <tr *ngFor="let result of results">
+                        <td><span>{{result.distance}}</span></td>
+                        <td><span>{{result.lastRunDate}}</span></td>
+                        <td><span>{{result.distance}}</span></td>
                     </tr>
                     </tbody>
                 </table>
