--- a/src/main/webapp/content/css/app.css
+++ b/src/main/webapp/content/css/app.css
@@ -5367,3 +5367,7 @@ Social Buttons
     background-position: bottom, top, center top;
     z-index: -1
 }
+
+.ngx-datepicker-container .ngx-datepicker-calendar-container {
+    z-index: 99;
+}
