--- a/src/main/webapp/app/training/survey/survey.component.html
+++ b/src/main/webapp/app/training/survey/survey.component.html
@@ -46,7 +46,7 @@
                                 </div>
                                 <div>
                                     <label class="i-switch m-t-xs">
-                                        <input type="checkbox" formControlName="metricSystem">
+                                        <input type="checkbox" formControlName="metricSystemType">
                                         <i></i>
                                     </label>
                                 </div>
