--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -8,13 +8,33 @@
         <div class="wrapper">
             <form>
                 <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" placeholder="Event name" class="input-sm form-control">
+                    <label>Title</label>
+                    <input type="text" placeholder="Event title" class="input-sm form-control">
                 </div>
                 <div class="form-group">
-                    <label>Date</label>
-                    <input type="text" placeholder="Event name" class="input-sm form-control">
+                    <label>Description</label>
+                    <input type="text" placeholder="Event description" class="input-sm form-control">
                 </div>
+                <div class="form-group">
+                    <label>Type</label>
+                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                </div>
+                <div class="form-group">
+                    <label>Duration</label>
+                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                </div>
+                <div class="form-group">
+                    <label>Distance</label>
+                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                </div>
+                <div class="form-group">
+                    <label>Max Speed</label>
+                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                </div>
+                <div class="form-group">
+                    <label>Mean Speed</label>
+                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                </div>`
                 <div class="form-group">
                     <label>Time</label>
                     <input type="text" placeholder="eg. 3:00 pm" class="input-sm form-control">
