--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -6,35 +6,62 @@
             <h3 class="m-n font-thin">Timeline</h3>
         </div>
         <div class="wrapper">
-            <form>
+            <form novalidate [formGroup]="addActivityForm" (ngSubmit)="submitActivity()">
                 <div class="form-group">
                     <label>Title</label>
-                    <input type="text" placeholder="Event title" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="title"
+                        placeholder="Event title"
+                        class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Description</label>
-                    <input type="text" placeholder="Event description" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="description"
+                        placeholder="Event description"
+                        class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Type</label>
-                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="type"
+                        placeholder="Event type"
+                        class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Duration</label>
-                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="duration"
+                        placeholder="Event type" class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Distance</label>
-                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="distance"
+                        placeholder="Event type"
+                        class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Max Speed</label>
-                    <input type="text" placeholder="Event type" class="input-sm form-control">
+                    <input
+                        type="text"
+                        formControlName="maxSpeed"
+                        placeholder="Event type"
+                        class="input-sm form-control">
                 </div>
                 <div class="form-group">
                     <label>Mean Speed</label>
-                    <input type="text" placeholder="Event type" class="input-sm form-control">
-                </div>`
+                    <input
+                        type="text"
+                        formControlName="meanSpeed"
+                        placeholder="Event type"
+                        class="input-sm form-control">
+                </div>
                 <div class="form-group">
                     <label>Time</label>
                     <input type="text" placeholder="eg. 3:00 pm" class="input-sm form-control">
