--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -2,7 +2,9 @@
     <!-- .col -->
     <div class="col w-lg bg-light dk b-r bg-auto" id="aside">
         <div class="wrapper bg b-b">
-            <button class="btn btn-sm btn-success pull-right" ui-toggle-class="timeline-center" target=".timeline">Center</button>
+            <button class="btn btn-sm btn-success pull-right" ui-toggle-class="timeline-center" target=".timeline">
+                Center
+            </button>
             <h3 class="m-n font-thin">Timeline</h3>
         </div>
         <div class="wrapper">
@@ -23,14 +25,17 @@
                         placeholder="Event description"
                         class="input-sm form-control">
                 </div>
+
                 <div class="form-group">
                     <label>Type</label>
-                    <input
-                        type="text"
-                        formControlName="type"
-                        placeholder="Event type"
-                        class="input-sm form-control">
+                        <select class="input-sm form-control" formControlName="type">
+                            <option>Running</option>
+                            <option>Walking</option>
+                            <option>Gym</option>
+                        </select>
                 </div>
+
+
                 <div class="form-group">
                     <label>Duration</label>
                     <input
@@ -83,7 +88,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="m-t-md m-b-md"><button class="btn btn-sm btn-primary">Add an event</button></div>
+                <div class="m-t-md m-b-md">
+                    <button class="btn btn-sm btn-primary">Add an event</button>
+                </div>
             </form>
         </div>
     </div>
@@ -134,8 +141,10 @@
                                     <i class="on md b-white bottom"></i>
                                 </a>
                                 <div class="clear">
-                                    <a href="" class="text-primary block m-b-xs">@Mike Mcalidek <i class="icon-twitter"></i></a>
-                                    <a href="" class="btn btn-addon btn-sm btn-primary m-t-xs"><i class="fa fa-eye"></i> Follow</a>
+                                    <a href="" class="text-primary block m-b-xs">@Mike Mcalidek <i
+                                        class="icon-twitter"></i></a>
+                                    <a href="" class="btn btn-addon btn-sm btn-primary m-t-xs"><i class="fa fa-eye"></i>
+                                        Follow</a>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +158,8 @@
                             <span class="arrow right pull-up visible-left"></span>
                             <div class="text-lt m-b-sm">Block</div>
                             <div class="panel-body pull-in b-t b-light">
-                                <p>I'm working on a realy amazing application, It will be available soon. here is a little tease. </p>
+                                <p>I'm working on a realy amazing application, It will be available soon. here is a
+                                    little tease. </p>
                                 <div class="m-b m-t">
                                     <a href class="avatar thumb-xs m-r-xs">
                                         <!--<img src="img/a7.jpg" alt="...">-->
@@ -173,7 +183,8 @@
                                 <div class="panel panel-default m-t-md m-b-n-sm pos-rlt">
                                     <span class="arrow top pull-left"></span>
                                     <form>
-                                        <textarea class="form-control no-border" rows="3" placeholder="Your comment..."></textarea>
+                                        <textarea class="form-control no-border" rows="3"
+                                                  placeholder="Your comment..."></textarea>
                                     </form>
                                     <div class="panel-footer bg-light lter">
                                         <button class="btn btn-info pull-right btn-sm">Comment</button>
