--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -20,12 +20,11 @@
 
                 <div class="form-group">
                     <label>Date & Time</label>
-                    <div class="form-group form-inline">
-                        <div class="col-sm-8 form-control">
-                            <ng-datepicker formControlName="date"></ng-datepicker>
-                        </div>
+                    <div class="form-inline">
 
-                        <select class="form-control col-sm-4" formControlName="time">
+                        <ng-datepicker formControlName="date" class="col-sm-6"></ng-datepicker>
+
+                        <select class="form-control col-sm-6" formControlName="time">
                             <option value="0">00:00AM</option>
                             <option value="0,5">00:30AM</option>
                             <option value="1">01:00AM</option>
