--- a/web/src/main/webapp/content/css/app.css
+++ b/web/src/main/webapp/content/css/app.css
@@ -5361,12 +5361,13 @@ Social Buttons
     /*position: absolute;*/
     width: 100%;
     /*height: 44.5rem;*/
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #FFF), url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAG0lEQVQYV2NkYGAwZmBgOMuABhjRBWB8ekgAAJFvAQfdnkk1AAAAAElFTkSuQmCC), url(https://assets.bwbx.io/business/public/images/tech-homepage-background-b985eb14ee.svg);
+    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), #FFF), url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAG0lEQVQYV2NkYGAwZmBgOMuABhjRBWB8ekgAAJFvAQfdnkk1AAAAAElFTkSuQmCC), url(http://uibuttons.com/images/tech-homepage-background-b985eb14ee.svg);
     /*background-size: 100% 100px, auto, auto;*/
     background-repeat: no-repeat, repeat, no-repeat;
     background-position: bottom, top, center top;
     z-index: -1
 }
+
 
 .ngx-datepicker-container .ngx-datepicker-calendar-container {
     z-index: 99;
